fixes spacing in main section and adds Logo component

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,7 @@
 @import "@teliads/components/foundations/colors/variables";
+@import "@teliads/components/foundations/spacing/variables";
 
 .mainSection {
+  padding: $telia-spacing-64 0 $telia-spacing-96 0;
   background-color: #e5e5e5;
 }
