--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,6 +1,8 @@
 @import "@teliads/components/foundations/colors/variables";
+@import "@teliads/components/foundations/spacing/variables";
 
 .telia-navbar {
+  padding: $telia-spacing-16 $telia-spacing-48;
   background-color: $telia-purple-900;
   height: 64px;
   display: flex;
@@ -13,7 +15,10 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    * {
+    &--right {
+      justify-content: flex-end;
+    }
+    .telia-p--subsection {
       color: $telia-white;
     }
   }
